--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": ">=0.18.1",
-    "npm": "^6.9.0",
-    "react": "^16.4.2",
-    "react-dev-utils": "^7.0.1",
-    "react-dom": "^16.4.2",
-    "react-scripts": "^2.1.3",
-    "webpack-dev-server": "^3.1.14"
+    "axios": "^0.21.1",
+    "npm": "^6.14.12",
+    "react": "^17.0.2",
+    "react-dev-utils": "^11.0.4",
+    "react-dom": "^16.14.0",
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
